Added refresh tokens into auth system
Game auth was kept the same (24h access token) and can be changed if desired
Web client access tokens have a life span of 15 minutes - poor things :'(
Refresh tokens are good forever until revoked (logout)
Refresh token interceptor could maybe be improved to prevent all requests after first failed request (instead of letting them fail and then holding onto them for replay)?
